tests/positive/declarations_typical.em
int main() {
int x = 5;
bool b = true;
return 0;
}