tests/negative/basic_tokenization_basic.em
int main() {
int 123x = 5;
return 0;
}